[package]
name = "cliquote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = "1.0.188"
serde_json = "1.0.107"
